--- a/public/style.css
+++ b/public/style.css
@@ -177,7 +177,7 @@ h1 {
   border: 2px solid #333;
   border-radius: 24px;
   max-width: 900px;
-  margin-left: auto;
+  margin-left: 90px;
   margin-right: auto;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
 }
